# motor_ros_driver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
include/: USVBattery.h  USVMotor.h  angle_operation.h
launch/: motor_start.launch
src/: motor_main.cpp
